--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://{alwinruby}.github.io/{app-react-pages}",
+  "homepage": "http://alwinruby.github.io/app-react-pages",
   "name": "app-react-pages",
   "version": "0.1.0",
   "private": true,
